--- a/Piano/piano.html
+++ b/Piano/piano.html
@@ -10,13 +10,14 @@
 	<style type="text/css" >
 	</style>
 	<!-- 引入js文件 -->
-	<script src="js/keyboard.js"></script>
 	<script src="js/Introduction.js"></script>
+	<script src="js/keyboard.js"></script>
 	<body>
 		<span id="htp" class="htp">how to play</span>
 		<div id = "inf">
 			<img class="pic" src="img/inf.png" >
-			<span id="close" class="close">X</span>
+				<span id="close" class="close">X</span>
+			</img>
 		</div>
 		<div class="title">
 			<span style="margin-left: 35vw;" class="letter" data-letter="P">P</span>
